<resources>
    <string name="app_name">MyCookBook</string>
    <string name="menu_name">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cookbook">Cookbook</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_new_recipe">New Recipe</string>
    <string name="title_view_recipe">View Recipe</string>
    <string name="google_icons">Icons created by Google</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_view_recipe">ViewRecipe</string>

    <!-- Strings related to account creation -->
    <string name="creation_heading"><u>Create A Cookbook Account</u></string>
    <string name="first_name">First</string>
    <string name="last_name">Last</string>
    <string name="password">Password</string>
    <string name="confirm_password">ConfirmP</string>
    <string name="username_email">Email</string>

    <!--Strings related to new recipe page-->
    <string name="recipe_name">Recipe Name:</string>
    <string name="ingredient">Ingredients:</string>
    <string name="quantity">Qty:</string>
    <string name="unit">Unit:</string>
    <string name="prep_time">Preparation Time:</string>
    <string name="oven_time">Oven Time:</string>
    <string name="oven_temp">Oven Temperature:</string>
    <string name="servings">Servings:</string>
    <string name="category">Category:</string>
    <string name="calories">Calories/Serving:</string>
    <string name="instructions">Instructions:</string>

    <string name="delete_user_msg">Recipe was successfully deleted.</string>
    <string name="share_user_msg">Recipe was shared successfully</string>
    <string name="not_shared_msg">Recipe has already been shared with this user</string>

    <!-- scale recipe popup window strings-->
    <string name="scale_recipe_heading">Scale Ingredients</string>
    <string name="scale_info">Scale the quantities of your ingredients by choosing a scaling factor below.</string>

    <!--Cookbook menu strings-->
    <string name="view_all">Show All Recipes</string>
    <string name="view_own">Show My Recipes</string>
    <string name="view_shared">Show Shared Recipes</string>

    <!--New Recipe menu strings-->
    <string name="save_recipe">Save Recipe</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="new_category">New Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="cancel">Cancel</string>

    <!-- Info Menu -->
    <string name="app_info">Help</string>

    <!-- Help option strings -->
    <string name="account_info_title">Account Creation Help</string>
    <string name="account_string_general">Enter your first name, last name, email address and a password of your choice. Email address and password are required to create an account.</string>
    <string name="account_string_pw">Your password must be between 8 and 16 characters. Your email address needs to contain an @ sign and a dot such as \".com\", and it has to be between 8 and 35 characters. The password and the repeated password need to match.</string>
    <string name="account_press_btn">When you have filled in your information, press \"Create Account\" to create an account.</string>

    <string name="menu_info_title">Welcome to MyCookBook!</string>
    <string name="menu_info">Here you can collect all of your favorite recipes, refer to them for cooking, and share them with your friends!</string>
    <string name="enjoy">Enjoy!</string>

    <string name="cookbook_info_title">Your Cookbook</string>
    <string name="cookbook_info">Here you can view all of your recipes. The menu on the top-right allows you to switch between viewing all recipes, only recipes that you have created personally and recipes that have been shared with you by your friends.</string>
    <string name="cookbook_info_search">The search bar on the top allows you to search your recipes for specific ingredients and categories.</string>
    <string name="cookbook_info_click">Click on one of the recipes to view the recipe.</string>

    <string name="view_info_title">View a Recipe</string>
    <string name="view_info">This page shows you all the details of the recipe.</string>
    <string name="view_info_toggle">The toggle button on the top allows you to switch between viewing your recipe in the US and the Metric measurement system.</string>
    <string name="view_info_toolbar">The Edit option under the Options Menu allows you to edit your recipe and the Scale option under the Options Menu allows you to resize the ingredient\'s quantities.
                                    If you would like to share your recipe, click on the Share option, enter an email address of a registered user and click Ok.</string>

    <string name="new_info_title">Create a New Recipe</string>
    <string name="new_info">Create a new recipe by filling in the fields below and clicking Save under the Options Menu.</string>
    <string name="new_info_constraints">The recipe name field and the first three ingredient fields are required fields. Only ingredients that are suggested by the ingredient input fields are allowed.
        Ingredients are not required to have a quantity and quantity unit associated with them.
        However, if a quantity is entered for an ingredient, then that ingredient also needs a quantity unit assigned to it. The quantity unit \"ct\" stands for \"count\" and can be used for ingredients that cannot be broken up,
        such as eggs. All visible ingredient rows need to be filled in. The primary category field is a required field. Any additional categories are optional. Any fields located after
        the category section are also optional.</string>
    <string name="new_info_floating">Click on New Ingredient to add
    an ingredient to choose from and click on New Category to add a category to choose from. You may delete a category that you have created and that is not used in any of your recipes.</string>
    <string name="happy_cooking">Happy Cooking!</string>


</resources>
