<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.cookbook.nanepothier.mycookbook.NewRecipeActivity">

    <item
            android:id="@+id/save_action"
            android:title="@string/save_recipe"
            app:showAsAction="never"
    />

    <item
            android:id="@+id/new_ingredient_action"
            android:title="@string/new_ingredient"
            app:showAsAction="never"
    />

    <item
            android:id="@+id/new_category_action"
            android:title="@string/new_category"
            app:showAsAction="never"
    />

    <item
            android:id="@+id/delete_category_action"
            android:title="@string/delete_category"
            app:showAsAction="never"
    />

    <item
            android:id="@+id/action_info"
            android:title="@string/app_info"
            app:showAsAction="never" />

    <item
            android:id="@+id/cancel_action"
            android:title="@string/cancel"
            app:showAsAction="never"
    />

</menu>