<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:layout_marginTop="50dp"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <TextView
                    android:text="@string/recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:inputType="textPersonName"
                    android:text="recipename"
                    android:ems="10"
                    android:id="@+id/recipe_name"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp"/>

            <TextView
                    android:text="@string/ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ingredient_label"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_name_label"
                    app:layout_constraintStart_toStartOf="parent"
            />

           <TableLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/table_layout"
                   android:layout_marginTop="20dp"
                   app:layout_constraintTop_toBottomOf="@id/ingredient_label"
                   app:layout_constraintStart_toStartOf="parent">

               <TableRow
                    android:id="@+id/row1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                   <Spinner
                           android:layout_width="147dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/spinner"
                           android:layout_weight="0.5"
                   />

                   <EditText
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/quantity1"
                            android:layout_weight="0.5"
                   />

                   <Spinner
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/measurement1"
                            android:layout_weight="0.5"
                   />

               </TableRow>

               <TableRow>

                   <Spinner
                           android:layout_width="149dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/spinner2"

                   />

                   <EditText
                           android:layout_width="20dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/quantity2"

                   />

                   <Spinner
                           android:layout_width="20dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/measurement2"


                   />

               </TableRow>

           </TableLayout>


            <TextView
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/category_label"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/table_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:inputType="textPersonName"
                    android:text="category"
                    android:ems="10"
                    android:id="@+id/category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/table_layout"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
            />

            <TextView
                    android:text="@string/servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/servings_label"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/category_label"
                    app:layout_constraintStart_toStartOf="parent"
                   />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:inputType="textPersonName"
                    android:text="servings"
                    android:ems="10"
                    android:id="@+id/servings"
                    app:layout_constraintTop_toBottomOf="@+id/category"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"/>

            <TextView
                    android:text="@string/prep_time"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:id="@+id/prep_time_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/servings_label"
                    android:layout_marginTop="32dp"
            />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:text="preptime"
                    android:ems="10"
                    android:id="@+id/prep_time"
                    app:layout_constraintTop_toBottomOf="@+id/servings"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"/>

            <TextView
                    android:text="@string/oven_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/oven_time_label"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/prep_time_label"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <EditText
                    android:layout_width="210dp"
                    android:layout_height="41dp"
                    android:inputType="textPersonName"
                    android:text="oven time"
                    android:ems="10"
                    android:id="@+id/oven_time"
                    app:layout_constraintTop_toBottomOf="@+id/prep_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

            <TextView
                    android:text="@string/oven_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/oven_temp_label"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/oven_time_label"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:inputType="textPersonName"
                    android:text="oven temp"
                    android:ems="10"
                    android:id="@+id/oven_temp"
                    app:layout_constraintTop_toBottomOf="@+id/oven_time"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView
                    android:text="@string/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:id="@+id/calories_label"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/oven_temp_label"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:inputType="textPersonName"
                    android:text="calorie"
                    android:ems="10"
                    android:id="@+id/calories"
                    app:layout_constraintTop_toBottomOf="@+id/oven_temp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="4dp" android:layout_marginRight="4dp"/>

            <TextView
                    android:text="@string/instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:id="@+id/instruction_label"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/calories_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText"
                    app:layout_constraintTop_toBottomOf="@+id/calories"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="4dp" android:layout_marginRight="4dp"/>
            <ToggleButton
                    android:text="ToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_name"
                    app:layout_constraintEnd_toEndOf="parent"
            />



        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>